--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.20.0",
     "body-parser": "^1.19.0",
+    "custom-env": "^2.0.1",
     "env-cmd": "^10.1.0",
     "express": "^4.17.1",
     "express-validator": "^6.6.1",
