--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "env-cmd": "^10.1.0",
     "express": "^4.17.1",
     "express-validator": "^6.6.1",
+    "mongoose": "^5.10.7",
     "uuid": "^8.3.0"
   },
   "devDependencies": {
